# web/admin/openapi.json
@@ -6461,6 +6461,51 @@
       }
     },
     "/api/v1/model-configs/{config_id}": {
+      "delete": {
+        "operationId": "delete_model_config_api_v1_model_configs__config_id__delete",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "config_id",
+            "required": true,
+            "schema": {
+              "title": "Config Id",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OkResponse"
+                }
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "security": [
+          {
+            "HTTPBearer": []
+          }
+        ],
+        "summary": "Delete Model Config",
+        "tags": [
+          "model-config"
+        ]
+      },
       "patch": {
         "operationId": "update_model_config_api_v1_model_configs__config_id__patch",
         "parameters": [
@@ -6635,6 +6680,51 @@
       }
     },
     "/api/v1/model-providers/{provider_id}": {
+      "delete": {
+        "operationId": "delete_model_provider_api_v1_model_providers__provider_id__delete",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "provider_id",
+            "required": true,
+            "schema": {
+              "title": "Provider Id",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OkResponse"
+                }
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "security": [
+          {
+            "HTTPBearer": []
+          }
+        ],
+        "summary": "Delete Model Provider",
+        "tags": [
+          "model-config"
+        ]
+      },
       "patch": {
         "operationId": "update_model_provider_api_v1_model_providers__provider_id__patch",
         "parameters": [
